Update About page layout and design
Refactored HTML and CSS for the About page to introduce a modern grid-based layout, added profile and social links, and enhanced the skills section. Improved responsiveness and hover effects for better user experience. Removed redundant scripts and streamlined the code structure.

--- a/home/about.html
+++ b/home/about.html
@@ -1,3 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About - Suhrob Kalandarov</title>
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Animation Library -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
+  <!-- Main Styles -->
+  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
+  <link rel="stylesheet" href="/assets/css/fragments/footer.css">
+  <link rel="stylesheet" href="/assets/css/pages/about.css">
+  <!-- Loading Animation -->
+  <link rel="stylesheet" href="/assets/css/loading-animation.css">
+</head>
+<body class="page-transition page-right">
+<!-- Loading Animation -->
+<div class="loading-screen">
+  <div class="hexagon-container"></div>
+  <div class="loader-wrapper">
+    <div class="loader">
+      <div class="cube">
+        <div class="cube-face"><div class="cube-inner"></div></div>
+        <div class="cube-face"><div class="cube-inner"></div></div>
+        <div class="cube-face"><div class="cube-inner"></div></div>
+        <div class="cube-face"><div class="cube-inner"></div></div>
+        <div class="cube-face"><div class="cube-inner"></div></div>
+        <div class="cube-face"><div class="cube-inner"></div></div>
+      </div>
+    </div>
+    <div class="page-name">About</div>
+    <div class="progress-container">
+      <div class="progress-bar"></div>
+    </div>
+    <div class="loading-text">LOADING</div>
+  </div>
+</div>
+
+<!-- Theme Toggle -->
+<div class="theme-toggle">
+  <i class="fas fa-moon"></i>
+</div>
+
+<!-- Include Navbar -->
+<div id="navbar-container"></div>
+
 <!-- About Section -->
 <section id="about" class="about page-content">
   <div class="section-bg-dots"></div>
@@ -77,3 +128,15 @@
     </div>
   </div>
 </section>
+
+<!-- Include Footer -->
+<div id="footer-container"></div>
+
+<!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script src="/assets/js/scripts.js"></script>
+<script src="/assets/js/fragments/navbar.js"></script>
+<script src="/assets/js/fragments/footer.js"></script>
+<script src="/assets/js/loading-animation.js"></script>
+</body>
+</html>
