Update about.html layout and replace profile image
Reorganized the "About Me" section for better readability, including moving statements and updating layout structure. Changed the profile image path and contact information for accuracy.

--- a/home/about.html
+++ b/home/about.html
@@ -56,21 +56,10 @@
     <div class="section-title" data-aos="fade-up">
       <h2>About Me</h2>
     </div>
-    <div class="statement-container" data-aos="fade-up" data-aos-delay="200">
-      <div class="statement" data-index="0">
-        <span>P</span><span>a</span><span>s</span><span>s</span><span>i</span><span>o</span><span>n</span><span>a</span><span>t</span><span>e</span> <span>a</span><span>b</span><span>o</span><span>u</span><span>t</span> <span>s</span><span>o</span><span>f</span><span>t</span><span>w</span><span>a</span><span>r</span><span>e</span> <span>c</span><span>r</span><span>a</span><span>f</span><span>t</span><span>s</span><span>m</span><span>a</span><span>n</span><span>s</span><span>h</span><span>i</span><span>p</span> <span>a</span><span>n</span><span>d</span> <span>s</span><span>o</span><span>l</span><span>v</span><span>i</span><span>n</span><span>g</span> <span>r</span><span>e</span><span>a</span><span>l</span> <span>p</span><span>r</span><span>o</span><span>b</span><span>l</span><span>e</span><span>m</span><span>s</span>
-      </div>
-      <div class="statement" data-index="1">
-        <span>C</span><span>o</span><span>m</span><span>m</span><span>i</span><span>t</span><span>t</span><span>e</span><span>d</span> <span>t</span><span>o</span> <span>b</span><span>u</span><span>i</span><span>l</span><span>d</span><span>i</span><span>n</span><span>g</span> <span>p</span><span>r</span><span>o</span><span>d</span><span>u</span><span>c</span><span>t</span><span>s</span> <span>t</span><span>h</span><span>a</span><span>t</span> <span>u</span><span>s</span><span>e</span><span>r</span><span>s</span> <span>l</span><span>o</span><span>v</span><span>e</span> <span>a</span><span>n</span><span>d</span> <span>b</span><span>u</span><span>s</span><span>i</span><span>n</span><span>e</span><span>s</span><span>s</span><span>e</span><span>s</span> <span>t</span><span>r</span><span>u</span><span>s</span><span>t</span>
-      </div>
-      <div class="statement" data-index="2">
-        <span>T</span><span>u</span><span>r</span><span>n</span><span>i</span><span>n</span><span>g</span> <span>c</span><span>h</span><span>a</span><span>l</span><span>l</span><span>e</span><span>n</span><span>g</span><span>e</span><span>s</span> <span>i</span><span>n</span><span>t</span><span>o</span> <span>c</span><span>o</span><span>d</span><span>e</span><span>,</span> <span>a</span><span>n</span><span>d</span> <span>i</span><span>d</span><span>e</span><span>a</span><span>s</span> <span>i</span><span>n</span><span>t</span><span>o</span> <span>p</span><span>r</span><span>o</span><span>d</span><span>u</span><span>c</span><span>t</span><span>s</span>
-      </div>
-    </div>
     <div class="about-content" data-aos="fade-up" data-aos-delay="400">
       <div class="about-grid">
         <div class="about-image" data-aos="fade-right" data-aos-delay="500">
-          <img src="/assets/images/profile.jpg" alt="Suhrob Kalandarov" class="profile-image">
+          <img src="/assets/img/profile/picture.jpg" alt="Suhrob Kalandarov" class="profile-image">
           <div class="social-links">
             <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
@@ -86,11 +75,11 @@
           </div>
           <div class="info-item">
             <i class="fas fa-envelope"></i>
-            <span>contact@example.com</span>
+            <span>suhrobqalandarov27@gmail.com</span>
           </div>
           <div class="info-item">
             <i class="fas fa-phone"></i>
-            <span>+998 90 123 4567</span>
+            <span>+998 91 775 5107</span>
           </div>
           <p>I'm a full-stack developer with a passion for creating elegant, efficient, and user-friendly applications. With expertise in both frontend and backend technologies, I enjoy tackling complex problems and turning ideas into reality.</p>
           <p>My approach combines technical excellence with a deep understanding of user needs, ensuring that the products I build not only work flawlessly but also provide an exceptional user experience.</p>
@@ -124,6 +113,18 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="statement-container" data-aos="fade-up" data-aos-delay="200">
+      <div class="statement" data-index="0">
+        <span>P</span><span>a</span><span>s</span><span>s</span><span>i</span><span>o</span><span>n</span><span>a</span><span>t</span><span>e</span> <span>a</span><span>b</span><span>o</span><span>u</span><span>t</span> <span>s</span><span>o</span><span>f</span><span>t</span><span>w</span><span>a</span><span>r</span><span>e</span> <span>c</span><span>r</span><span>a</span><span>f</span><span>t</span><span>s</span><span>m</span><span>a</span><span>n</span><span>s</span><span>h</span><span>i</span><span>p</span> <span>a</span><span>n</span><span>d</span> <span>s</span><span>o</span><span>l</span><span>v</span><span>i</span><span>n</span><span>g</span> <span>r</span><span>e</span><span>a</span><span>l</span> <span>p</span><span>r</span><span>o</span><span>b</span><span>l</span><span>e</span><span>m</span><span>s</span>
+      </div>
+      <div class="statement" data-index="1">
+        <span>C</span><span>o</span><span>m</span><span>m</span><span>i</span><span>t</span><span>t</span><span>e</span><span>d</span> <span>t</span><span>o</span> <span>b</span><span>u</span><span>i</span><span>l</span><span>d</span><span>i</span><span>n</span><span>g</span> <span>p</span><span>r</span><span>o</span><span>d</span><span>u</span><span>c</span><span>t</span><span>s</span> <span>t</span><span>h</span><span>a</span><span>t</span> <span>u</span><span>s</span><span>e</span><span>r</span><span>s</span> <span>l</span><span>o</span><span>v</span><span>e</span> <span>a</span><span>n</span><span>d</span> <span>b</span><span>u</span><span>s</span><span>i</span><span>n</span><span>e</span><span>s</span><span>s</span><span>e</span><span>s</span> <span>t</span><span>r</span><span>u</span><span>s</span><span>t</span>
+      </div>
+      <div class="statement" data-index="2">
+        <span>T</span><span>u</span><span>r</span><span>n</span><span>i</span><span>n</span><span>g</span> <span>c</span><span>h</span><span>a</span><span>l</span><span>l</span><span>e</span><span>n</span><span>g</span><span>e</span><span>s</span> <span>i</span><span>n</span><span>t</span><span>o</span> <span>c</span><span>o</span><span>d</span><span>e</span><span>,</span> <span>a</span><span>n</span><span>d</span> <span>i</span><span>d</span><span>e</span><span>a</span><span>s</span> <span>i</span><span>n</span><span>t</span><span>o</span> <span>p</span><span>r</span><span>o</span><span>d</span><span>u</span><span>c</span><span>t</span><span>s</span>
       </div>
     </div>
   </div>
