Update About page with new skills and contact links
Added new skills (Java, Spring Boot, Hibernate, PostgreSQL) and updated social/contact links (Email, Telegram, LinkedIn, GitHub). Improved layout and accessibility for better user experience.

--- a/home/about.html
+++ b/home/about.html
@@ -56,14 +56,24 @@
     <div class="section-title" data-aos="fade-up">
       <h2>About Me</h2>
     </div>
+
     <div class="about-content" data-aos="fade-up" data-aos-delay="400">
       <div class="about-grid">
         <div class="about-image" data-aos="fade-right" data-aos-delay="500">
           <img src="/assets/img/profile/picture.jpg" alt="Suhrob Kalandarov" class="profile-image">
           <div class="social-links">
-            <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+            <a href="mailto:suhrobqalandarov27@gmail.com" class="social-icon" aria-label="Email">
+              <i class="fas fa-envelope"></i>
+            </a>
+            <a href="https://t.me/SuhrobKalandarov" class="social-icon" aria-label="Telegram">
+              <i class="fab fa-telegram-plane"></i>
+            </a>
+            <a href="https://linkedin.com/in/suhrob-qalandarov-4a20b5293" class="social-icon" aria-label="LinkedIn">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://github.com/suhrob-kalandarov" class="social-icon" aria-label="GitHub">
+              <i class="fab fa-github"></i>
+            </a>
           </div>
         </div>
         <div class="about-info" data-aos="fade-left" data-aos-delay="500">
@@ -87,28 +97,29 @@
             <h4>Technical Skills</h4>
             <div class="skills-grid">
               <div class="skill-item">
-                <i class="fab fa-react"></i>
-                <span>React</span>
+                <i class="fab fa-java"></i>
+                <span>Java</span>
               </div>
               <div class="skill-item">
-                <i class="fab fa-node-js"></i>
-                <span>Node.js</span>
+                <i class="fas fa-leaf"></i>
+                <span>Spring Boot</span>
               </div>
-              <div class="skill-item">
-                <i class="fab fa-js"></i>
-                <span>JavaScript</span>
+              <div class="skill-item" data-aos="zoom-in" data-aos-delay="700">
+                <i class="fas fa-database"></i>
+                <span>Hibernate</span>
               </div>
-              <div class="skill-item">
-                <i class="fab fa-html5"></i>
-                <span>HTML5</span>
-              </div>
-              <div class="skill-item">
-                <i class="fab fa-css3-alt"></i>
-                <span>CSS3</span>
+              <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
+                <i class="fas fa-server"></i>
+                <span>PostgreSQL</span>
               </div>
               <div class="skill-item">
                 <i class="fas fa-database"></i>
                 <span>MongoDB</span>
+              </div>
+              <div class="skill-item">
+                <i class="fab fa-html5"></i>
+                <span>HTML5/CSS3</span>
+                <i class="fab fa-css3-alt"></i>
               </div>
             </div>
           </div>
@@ -121,7 +132,8 @@
         <span>P</span><span>a</span><span>s</span><span>s</span><span>i</span><span>o</span><span>n</span><span>a</span><span>t</span><span>e</span> <span>a</span><span>b</span><span>o</span><span>u</span><span>t</span> <span>s</span><span>o</span><span>f</span><span>t</span><span>w</span><span>a</span><span>r</span><span>e</span> <span>c</span><span>r</span><span>a</span><span>f</span><span>t</span><span>s</span><span>m</span><span>a</span><span>n</span><span>s</span><span>h</span><span>i</span><span>p</span> <span>a</span><span>n</span><span>d</span> <span>s</span><span>o</span><span>l</span><span>v</span><span>i</span><span>n</span><span>g</span> <span>r</span><span>e</span><span>a</span><span>l</span> <span>p</span><span>r</span><span>o</span><span>b</span><span>l</span><span>e</span><span>m</span><span>s</span>
       </div>
       <div class="statement" data-index="1">
-        <span>C</span><span>o</span><span>m</span><span>m</span><span>i</span><span>t</span><span>t</span><span>e</span><span>d</span> <span>t</span><span>o</span> <span>b</span><span>u</span><span>i</span><span>l</span><span>d</span><span>i</span><span>n</span><span>g</span> <span>p</span><span>r</span><span>o</span><span>d</span><span>u</span><span>c</span><span>t</span><span>s</span> <span>t</span><span>h</span><span>a</span><span>t</span> <span>u</span><span>s</span><span>e</span><span>r</span><span>s</span> <span>l</span><span>o</span><span>v</span><span>e</span> <span>a</span><span>n</span><span>d</span> <span>b</span><span>u</span><span>s</span><span>i</span><span>n</span><span>e</span><span>s</span><span>s</span><span>e</span><span>s</span> <span>t</span><span>r</span><span>u</span><span>s</span><span>t</span>
+        <span>C</span><span>o</span><span>m</span><span>m</span><span>i</span><span>t</span><span>t</span><span>e</span><span>d</span> <span>t</span><span>o</span> <span>b</span><span>u</span><span>i</span><span>l</span><span>d</span><span>i</span><span>n</span><span>g</span> <span>p</span><span>r</span><span>o</span><span>d</span><span>u</span><span>c</span><span>t</span><span>s</span> <span>t</span><span>h</span><span>a</span><span>t</span> <span>u</span><span>s</span><span>e</span><span>r</span><span>s</span> <span>l</span><span>o</span><span>v</span><span>e</span> <span>a</span><span>n</span><span>d</span>
+        <span>b</span><span>u</span><span>s</span><span>i</span><span>n</span><span>e</span><span>s</span><span>s</span><span>e</span><span>s</span> <span>t</span><span>r</span><span>u</span><span>s</span><span>t</span>
       </div>
       <div class="statement" data-index="2">
         <span>T</span><span>u</span><span>r</span><span>n</span><span>i</span><span>n</span><span>g</span> <span>c</span><span>h</span><span>a</span><span>l</span><span>l</span><span>e</span><span>n</span><span>g</span><span>e</span><span>s</span> <span>i</span><span>n</span><span>t</span><span>o</span> <span>c</span><span>o</span><span>d</span><span>e</span><span>,</span> <span>a</span><span>n</span><span>d</span> <span>i</span><span>d</span><span>e</span><span>a</span><span>s</span> <span>i</span><span>n</span><span>t</span><span>o</span> <span>p</span><span>r</span><span>o</span><span>d</span><span>u</span><span>c</span><span>t</span><span>s</span>
