Update about page content with refined details and links
Updated the text to emphasize Java backend expertise and scalable system design. Added a link to the pet projects page for showcasing personal work. Made minor structural adjustments to improve layout spacing.

--- a/home/about.html
+++ b/home/about.html
@@ -76,6 +76,8 @@
             </a>
           </div>
         </div>
+
+
         <div class="about-info" data-aos="fade-left" data-aos-delay="500">
           <h3>Suhrob Kalandarov</h3>
           <h4>Full-Stack Developer</h4>
@@ -91,8 +93,11 @@
             <i class="fas fa-phone"></i>
             <span>+998 91 775 5107</span>
           </div>
-          <p>I'm a full-stack developer with a passion for creating elegant, efficient, and user-friendly applications. With expertise in both frontend and backend technologies, I enjoy tackling complex problems and turning ideas into reality.</p>
-          <p>My approach combines technical excellence with a deep understanding of user needs, ensuring that the products I build not only work flawlessly but also provide an exceptional user experience.</p>
+
+          <p>I'm a full-stack developer with strong expertise in Java backend development. I focus on building secure, fast, and clean applications that can handle large amounts of user data effectively.</p>
+          <p>I work with MVC architecture and have experience creating scalable and maintainable systems. You can check out some of my personal work on the
+            <a href="/home/projects.html" class="nav-link"><strong>pet projects</strong></a> page.</p>
+
           <div class="skills-section">
             <h4>Technical Skills</h4>
             <div class="skills-grid">
@@ -124,6 +129,8 @@
             </div>
           </div>
         </div>
+
+
       </div>
     </div>
 
