Update experience description for clarity and precision
Refined the description to specify "Java Backend" and added "Junior" for a clearer indication of the learning scope. This improves the comprehensibility and accuracy of the program details.

--- a/home/experience.html
+++ b/home/experience.html
@@ -69,7 +69,7 @@
                     <div class="experience-date">June 2024 - November 2025 (Present)</div>
                     <div class="experience-role">Backend Development</div>
                     <p class="experience-description">
-                        Learning Java from 0 to 100, backend technologies, and solving logical problems using C++ core concepts. The program provides comprehensive training in software development with a focus on backend technologies and practical applications.
+                        Learning Java Backend from 0 to 100 Junior, backend technologies, and solving logical problems using C++ core concepts. The program provides comprehensive training in software development with a focus on backend technologies and practical applications.
                     </p>
                 </div>
                 <div class="experience-image">
