Update date range format for PDP Academy experience
Clarified the end date for PDP Academy to "June/July 2025" for accuracy. This ensures better alignment with the actual program timeline.

--- a/home/experience.html
+++ b/home/experience.html
@@ -66,7 +66,7 @@
                         </div>
                         <h3 class="experience-title green-title">PDP ACADEMY</h3>
                     </div>
-                    <div class="experience-date">April 2024 - June 2025 (Present)</div>
+                    <div class="experience-date">April 2024 - June/July 2025 (Present)</div>
                     <div class="experience-role">Backend Development</div>
                     <p class="experience-description">
                         Learning Java Backend from 0 to 100 Junior, backend technologies, and solving logical problems using C++ core concepts. The program provides comprehensive training in software development with a focus on backend technologies and practical applications.
